# NeuralMixedEffects

./: .gitignore  README.md  pyproject.toml
data/: loader.py
example/: Orthodont.csv  example.py
ml/: models.py  train.py
